--- a/styles.css
+++ b/styles.css
@@ -104,10 +104,14 @@ header.homepage__header {
   width: 100%;
   text-align: center;
   max-width: 1100px;
-  margin: 4rem auto;
+  margin: 5rem auto;
 
   @media screen and (max-width: 1200px) {
     max-width: calc(100vw - 6rem);
+  }
+
+  @media screen and (max-width: 600px) {
+    max-width: calc(100vw - 3rem);
   }
 
   h1 {
