--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ h3,
   }
 
   @media screen and (max-width: 500px) {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 }
 
@@ -253,6 +253,13 @@ ul li {
 
 img {
   width: 100%;
+}
+
+// Helper classes
+@media screen and (max-width: 500px) {
+  .remove-on-mobile {
+    display: none;
+  }
 }
 
 .grid {
@@ -392,12 +399,21 @@ img {
   letter-spacing: 2px;
   text-shadow: 2px 2px 0px var(--c-lilac);
   text-decoration: none;
+
+  @media screen and (max-width: 500px) {
+    font-size: 0.9rem;
+    text-shadow: 1px 1px 0px var(--c-lilac);
+  }
 }
 
 .menu-link:is(:hover, :focus, :active) {
   text-decoration: underline;
   text-underline-offset: 5px;
   text-decoration-thickness: 2px;
+
+  @media screen and (max-width: 500px) {
+    text-underline-offset: 3px;
+  }
 }
 
 #theme-toggle {
