--- a/styles.css
+++ b/styles.css
@@ -462,7 +462,7 @@ header.homepage__header {
 
 .about .window__content {
   overflow: auto;
-  max-height: 34.5rem;
+  max-height: 80vh;
   @media screen and (max-width: 900px) {
     max-height: unset;
   }
