--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,10 @@
   box-sizing: border-box;
 }
 
+*:focus {
+  outline: 3px solid var(--c-purple);
+}
+
 ::-webkit-scrollbar {
   width: 16px;
   background: red;
@@ -445,6 +449,38 @@ header.homepage__header {
 }
 
 /* About me */
+.about {
+  .some-links {
+    display: flex;
+    list-style-type: none;
+    gap: 2rem;
+    align-items: center;
+    padding: 0;
+
+    .some-links__link {
+      font-size: 4rem;
+      font-family: var(--f-title);
+      text-decoration: none;
+      transition: 0.2s;
+      display: block;
+
+      img {
+        width: 50px;
+        height: 50px;
+        margin-bottom: 0.5rem;
+      }
+    }
+
+    .some-links__link:is(:hover, :focus, :active) {
+      transform: scale(1.2);
+    }
+  }
+
+  h2 {
+    color: var(--detail-color);
+    margin-top: 2rem;
+  }
+}
 .about .window {
   margin-top: 6rem;
 
@@ -462,7 +498,7 @@ header.homepage__header {
 
 .about .window__content {
   overflow: auto;
-  max-height: 80vh;
+  max-height: calc(100vh - 12rem);
   @media screen and (max-width: 900px) {
     max-height: unset;
   }
@@ -476,8 +512,12 @@ header.homepage__header {
 
 .about img {
   width: 100%;
-  height: 56vh;
+  max-height: calc(100vh - 12rem);
   object-fit: contain;
+  display: block;
+  @media screen and (max-width: 900px) {
+    max-height: unset;
+  }
 }
 
 .articles {
