--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   --c-pink: rgb(255, 224, 230);
   --c-lilac: rgb(229, 163, 255);
   --c-purple: rgb(158 84 241);
+  --c-purple-darker: rgb(118 18 231);
   --c-blue: #0000ff;
   --c-yellow: rgb(255, 245, 187);
 
@@ -18,7 +19,7 @@
   --window-white-bg: #ffffff;
   --window-blue-bg: var(--c-blue);
   --detail-color: var(--c-purple);
-  --link-color: var(--c-purple);
+  --link-color: var(--c-purple-darker);
 }
 
 /* Dark mode */
